Fix headings in dark mode

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -53,3 +53,7 @@
     }
   }
 }
+
+.content h1, .content .fake-h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
+  @apply dark:text-gray-300;
+}
